# em400

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README  README.md  TODO  appversion  appversion.cmake  cp_api.c  em400.cfg.template  mera400.c  mjc400.c  mjc400.h  mjc400_instr.c  mjc400_instr.h  mjc400_iset.c  mjc400_iset.h  mjc400_mem.c  mjc400_mem.h  mjc400_regs.c  mjc400_regs.h
assem/: CMakeLists.txt  Makefile  README  README.md  TODO  assem.l  assem.y  assem_ops.c  assem_ops.h  dict.c  dict.h  elements.c  elements.h  errors.h  eval.c  eval.h  image.c  image.h  keywords.c  keywords.h  main.c  nodes.c  nodes.h  ops.c  ops.h  parser_classic.y  parser_modern.y  parsers.c  parsers.h  pprocess.c  pprocess.h  pragmas.c  pragmas.h  pragmas_classic.c  pragmas_classic.h  pragmas_modern.c  pragmas_modern.h  scanner.l  scanner_classic.l  scanner_modern.l
em400/: CMakeLists.txt  Makefile  README  README.md  TODO  awin.c  cpu.c  cpu.h  dasm.c  dasm.h  dasm_formats.h  dasm_iset.c  debuger.c  debuger.h  debuger_cmd.c  debuger_eval.c  debuger_parser.y  debuger_scanner.l  debuger_ui.c  debuger_ui.h  debugger.c  debugger_cmd.c  debugger_eval.c  debugger_parser.y  debugger_scanner.l  debugger_ui.c  em400.c  em400.cfg  em400.cfg.template  em400_debuger.c  em400_debuger.h  em400_debuger_nc.h  em400_debuger_ui.c  em400_debuger_ui.h  em400_errors.c  em400_errors.h  em400_io.h  em400_mem.c  em400_mem.h  em400_routines.c  (+39 more)
em400/boot/: boot_winch.asm
em400/include/: alu.h  awin.h  cfg.h  cpu.h  dasm.h  dasm_formats.h  debuger.h  debuger_cmd.h  debuger_eval.h  debuger_ui.h  debugger.h  debugger_cmd.h  debugger_eval.h  debugger_ui.h  e4image.h  em400.h  errors.h  instructions.h  interrupts.h  io.h  iset.h  memory.h  registers.h  timer.h  utils.h
em400/include/cpu/: alu.h  cpu.h  instructions.h  interrupts.h  iset.h  memory.h  registers.h  timer.h
em400/include/debugger/: awin.h  cmd.h  dasm.h  dasm_formats.h  dasm_iset.h  debugger.h  decode.h  eval.h  keywords.h  log.h  ui.h
em400/include/drv/: cchar.h  cmem.h  cmem_cf.h  cnone.h  drivers.h  lib.h  multix.h  multix_cf.h  u9425.h  unone.h
em400/include/io/: cchar.h  cchar_term_cons.h  chan.h  cmem.h  cmem_cf.h  cmem_m9425.h  cnone.h  drivers.h  io.h  lib.h  multix.h  multix_cf.h  multix_floppy.h  multix_puncher.h  multix_punchreader.h  multix_terminal.h  multix_winch.h  plix.h  term.h  u9425.h
em400/include/mem/: mem_elwro.h
em400/src/: CMakeLists.txt  alu.c  cfg.c  cfg_parser.y  cfg_scanner.l  cpu.c  e4image.c  e4itool.c  em400.c  errors.c  instructions.c  interrupts.c  io.c  iset.c  memory.c  registers.c  timer.c  utils.c
em400/src/cpu/: CMakeLists.txt  alu.c  cpu.c  instructions.c  interrupts.c  iset.c  memory.c  registers.c  timer.c
em400/src/debugger/: CMakeLists.txt  awin.c  cmd.c  dasm.c  dasm_iset.c  debugger.c  decode.c  eval.c  keywords.c  log.c  parser.y  scanner.l  ui.c
em400/src/drv/: CMakeLists.txt  cchar.c  cmem.c  cmem_cf.c  cnone.c  drivers.c  lib.c  multix.c  multix_cf.c  u9425.c  unone.c
em400/src/io/: CMakeLists.txt  cchar.c  cchar_term.c  cchar_term_cons.c  cmem.c  cmem_cf.c  cmem_m9425.c  cnone.c  drivers.c  e4image.c  io.c  lib.c  multix.c  multix_cf.c  multix_floppy.c  multix_puncher.c  multix_punchreader.c  multix_term.c  multix_terminal.c  multix_winch.c  plix.c  term.c  u9425.c
em400/src/mem/: mem_elwro.c  mem_mega.c
em400/tests/: TODO  benchmark.py  runtests.py
em400/tests/alu/: 32-mw.asm  ad-carry.asm  ad-minus-2.asm  ad-minus-carry.asm  ad-minus-ov.asm  ad-minus.asm  ad-ov-carry.asm  ad-simple.asm  ad-zero-carry-ov.asm  ad-zero-carry.asm  ad-zero.asm  ad.asm  dw-div0.asm  dw-overflow.asm  dw.asm  fp-af-carry.asm  fp-af-minus.asm  fp-af-no-carry.asm  fp-af-zero.asm  fp-af.asm  fp-denorm-arg1.asm  fp-denorm-arg2.asm  fp-denorm-zero.asm  fp-df-minus.asm  fp-df-zero.asm  fp-df.asm  fp-div0.asm  fp-exp-overflow.asm  fp-exp-underflow.asm  fp-mf-minus.asm  fp-mf-zero.asm  fp-mf.asm  fp-norm.asm  fp-not-norm-1.asm  fp-not-norm-2.asm  fp-not-norm-zero.asm  fp-nrf-carry.asm  fp-nrf-denorm-zero.asm  fp-nrf-minus.asm  fp-nrf-no-carry.asm  (+14 more)
em400/tests/args/: arg-norm-mem.asm  arg-norm-val.asm  (+4 more)
src/: CMakeLists.txt  app_err.c  app_err.h  appcfg.c  appcfg.h  cfg.c  cfg.h  cfg_parser.y  cfg_scanner.l  default_config.h  ectl_cp.c  ectl_dev.c  ectl_emu.c  elst.c  em400.c  em400.h  embin.c  emitool.c  emterm.c  emulog.c  errors.c  libem400.c  libem400.h  log.c  log.h  log_crk.c  log_io.c  log_io.h  logger.c  utils.c
src/cp/: brk.c  brk.h  cp.c  cp.h  cpext.c  cpext.h  cpu.c  eval.c  eval.h  eval_parser.y  eval_scanner.l  watch.c  watch.h
src/cpu/: CMakeLists.txt  alu.c  alu.h  awp.c  buzzer.c  buzzer.h  clock.c  clock.h  cp.c  cp.h  cpext.c  cpext.h  cpu.c  cpu.h  instructions.c  instructions.h  interrupts.c  interrupts.h  iset.c  iset.h  registers.c  timer.c
src/dasm/: CMakeLists.txt  dasm.c  dasm_extcode.c  dasm_iset.c
src/debugger/: CMakeLists.txt  awin.c  awinch.c  cmd.c  dasm_iset.c  debugger.c  decode.c  eval.c  keywords.c  log.c  parser.y  scanner.l  ui.c
src/ectl/: CMakeLists.txt  brk.c  brk.h  cpu.c  est.c  est.h  eval.c  eval.h  eval_parser.y  eval_scanner.l  parser.y  scanner.l
src/fpga/: CMakeLists.txt  iobus.c  iobus.h
src/io/: CMakeLists.txt  cchar.c  cchar.h  cchar_flop8.c  cchar_flop8.h  cchar_term.c  cchar_term.h  chan.c  chan.h  cmem.c  cmem.h  cmem_m9425.c  cmem_m9425.h  defs.h  dev.c  dev_winch.c  e4image.c  io.c  io.h  iotester.c  iotester.h  multix.c  multix_floppy.c  multix_puncher.c  multix_punchreader.c  multix_term.c  multix_winch.c  mx.c  mx_cmd.c  mx_cmds.c  mx_dma.c  mx_ev.c  mx_intr.c  mx_irq.c  mx_line.c  mx_proto.c  mx_proto_common.c  mx_proto_floppy.c  mx_proto_puncher.c  mx_proto_punchrd.c  (+14 more)
src/mem/: CMakeLists.txt  elwro.c  elwro.h  mega.c  mega.h  mega_prom.c  mega_prom.h  mem.c  mem.h  mem_elwro.c  mem_mega.c
src/sound/: alsa.c  biquad.c  file.c  pulseaudio.c  sound.c  sound.h
src/ui/: CMakeLists.txt  ui.c  ui.h
src/utils/: CMakeLists.txt  compat_time.c  compat_time.h  elst.c  elst.h  fdbridge.c  fdbridge.h  serial.c  serial.h  utils.c  utils.h
(+1287 files in other folders)
