CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(em400 C)

set(WITH_DEBUGGER 1)
set(WITH_SPEEDOPT 0)

set(EM400_VERSION 0.1.0)

find_package(BISON)
find_package(FLEX)

INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(build)

ADD_DEFINITIONS(-Wall -std=c99 -D_XOPEN_SOURCE=600 -Os -pthread -DEM400_VERSION="${EM400_VERSION}" -g)

IF(WITH_SPEEDOPT)
	ADD_DEFINITIONS(-DWITH_SPEEDOPT)
ENDIF(WITH_SPEEDOPT)

IF(WITH_DEBUGGER)
    INCLUDE_DIRECTORIES(build/debugger) 
	ADD_DEFINITIONS(-DWITH_DEBUGGER)
	ADD_SUBDIRECTORY(src/debugger build/debugger)
	set(DEBUGGER_LIB debugger)
ELSE(WITH_DEBUGGER)
	set(DEBUGGER_LIB)
ENDIF(WITH_DEBUGGER)

ADD_SUBDIRECTORY(src/drv build/drv)
ADD_SUBDIRECTORY(src/cpu build/cpu)
ADD_SUBDIRECTORY(src build)

# vim: tabstop=4
