CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)
PROJECT(em400 C)

set(WITH_DEBUGGER 1)

set(EM400_VERSION 0.1.0)

find_package(BISON)
find_package(FLEX)
find_package(Threads)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/build)

ADD_DEFINITIONS(-Wall -std=c99 -D_XOPEN_SOURCE=600 -Ofast -DEM400_VERSION="${EM400_VERSION}")

IF(WITH_DEBUGGER)
	set(CURSES_NEED_NCURSES TRUE)
	find_package(Curses)
	include_directories(SYSTEM ${CURSES_INCLUDE_DIR})
	INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/build/debugger) 
	ADD_DEFINITIONS(-DWITH_DEBUGGER)
	ADD_SUBDIRECTORY(src/debugger build/debugger)
	set(DEBUGGER_LIBS debugger ${CURSES_LIBRARIES} readline)
ELSE(WITH_DEBUGGER)
	set(DEBUGGER_LIBS)
ENDIF(WITH_DEBUGGER)

ADD_SUBDIRECTORY(src/io build/io)
ADD_SUBDIRECTORY(src/mem build/mem)
ADD_SUBDIRECTORY(src/cpu build/cpu)
ADD_SUBDIRECTORY(src build)

# vim: tabstop=4
